--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-    "name": "12-homework",
-    "version": "1.0.0",
-    "description": "",
-    "main": "sql.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Martin Munoz",
-    "license": "ISC",
-    "dependencies": {
-      "inquirer": "^6.2.1",
-      "mysql": "^2.16.0"
-    }
+  "name": "12-homework",
+  "version": "1.0.0",
+  "description": "",
+  "main": "sql.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Martin Munoz",
+  "license": "ISC",
+  "dependencies": {
+    "figlet": "^1.3.0",
+    "inquirer": "^6.5.2",
+    "mysql": "^2.16.0"
   }
-  
+}
